--- a/Sorting-filing.ipynb
+++ b/Sorting-filing.ipynb
@@ -145,7 +145,7 @@
     "while (integer != 0):\n",
     "    integer = int(input(\"Enter an integer: \"))\n",
     "    my_list.append(integer)\n",
-    "    my_list.sort(reverse=True)\n",
+    "n     my_list.sort(reverse=True)\n",
     "for integer in my_list:\n",
     "    print(integer, end=' ')"
    ]
