--- a/Mini Project/Mini projects.ipynb
+++ b/Mini Project/Mini projects.ipynb
@@ -10,25 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "607ff4a4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# importing libraries\n",
     "from tkinter import *\n",
     "import tkinter as tk\n",
     "from tkinter import messagebox\n",
     "import datetime as dt\n",
     "\n",
+    "# the main window of GUI application and its assigned to the variable master.\n",
     "master = Tk()\n",
     "master.title(\" TO-DO-LIST \")\n",
-    "master.config(bg = \"pink\")\n",
+    "master.config(bg = \"pink\") \n",
     "\n",
     "frame1 = Frame(master, bg = \"black\", bd = 8, relief = \"sunken\")\n",
     "frame1.grid(row = 2, column = 1)\n",
+    "\n",
+    "# defining functions that execute task to the to-do-list\n",
     "def add_task():\n",
-    "    task = entry.get() \n",
-    "    listbox.insert(END, task)\n",
+    "    task = entry.get() # the task is entered by the user.\n",
+    "    listbox.insert(END, task) \n",
     "    entry.delete(0, END)\n",
     "\n",
     "def mark_completed():\n",
@@ -44,17 +48,14 @@
     "    selected_task_index = listbox.curselection()\n",
     "    listbox.delete(selected_task_index)\n",
     "    \n",
-    "def delete_complete_task():\n",
-    "    selected_task_index = completed_listbox.curselection()\n",
-    "    completed_listbox.delete(selected_task_index)\n",
-    "\n",
     "date = dt.datetime.now()\n",
     "label_date = Label(master, text = f\"{date:%A, %B %d, %Y}\", bg = \"grey\", bd = 8, fg= \"white\", relief = \"raised\").grid(row = 7, column = 1)   \n",
-    "        \n",
+    "\n",
+    "\n",
     "        \n",
     "Label(master, text=\"Smartech To-do-list\", bg = \"grey\", fg = \"white\",font = (\"Algerian\",20)).grid(row=0, column = 1, columnspan =2)\n",
     "Label(master, text=\"Today's Task\", bg = \"black\", fg = \"white\",font = (\"Algerian\",20)).grid(row=3, column = 1, columnspan =2)\n",
-    "Label(master, text=\"Completed Tasks\", bg = \"grey\", fg = \"white\",font = (\"Algerian\",20)).grid(row=5, column = 1, columnspan =2)        \n",
+    "Label(master, text=\"Completed Task\", bg = \"grey\", fg = \"white\",font = (\"Algerian\",20)).grid(row=5, column = 1, columnspan =2)        \n",
     "entry = Entry(master, width = 50, bd =8, relief = \"sunken\")\n",
     "entry.grid(row = 1, column = 1)\n",
     "\n",
@@ -67,8 +68,6 @@
     "Button(frame1, text=\"Add Task\", command=add_task, fg = \"black\", relief = \"raised\", bd = 6).grid(row=2, column=0, padx=2, pady=3)\n",
     "Button(frame1, text=\"Mark Completed\", command=mark_completed, fg = \"green\", relief = \"raised\", bd = 6).grid(row=2, column=1, padx=2, pady=3)\n",
     "Button(frame1, text=\"Delete Task\", command=delete_task, fg = \"red\", relief = \"raised\", bd = 6).grid(row=2, column=2, padx=2, pady=3)\n",
-    "\n",
-    "Button(frame1, text=\"Del Completed Task\", command=delete_complete_task, fg = \"orange\", relief = \"raised\", bd = 6).grid(row=2, column=3, padx=2, pady=3)\n",
     "\n",
     "\n",
     "master.mainloop()"
