--- a/Mini Project/Project 1 - TO-DO-LIST.ipynb
+++ b/Mini Project/Project 1 - TO-DO-LIST.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96d00e0f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in Tkinter callback\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\ACER\\anaconda3\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
+      "    return self.func(*args)\n",
+      "           ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\ACER\\AppData\\Local\\Temp\\ipykernel_11292\\1421220867.py\", line 23, in delete_task\n",
+      "    listbox.delete(selected_task_index)\n",
+      "  File \"C:\\Users\\ACER\\anaconda3\\Lib\\tkinter\\__init__.py\", line 3245, in delete\n",
+      "    self.tk.call(self._w, 'delete', first, last)\n",
+      "_tkinter.TclError: bad listbox index \"\": must be active, anchor, end, @x,y, or a number\n"
+     ]
+    }
+   ],
    "source": [
     "from tkinter import *\n",
     "import tkinter as tk\n",
@@ -59,6 +76,14 @@
     "\n",
     "master.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09eb3bff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
