--- a/Class/Python Basics/Functions in Python.ipynb
+++ b/Class/Python Basics/Functions in Python.ipynb
@@ -44,6 +44,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b36bb5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your guess is: 2\n",
+      "no\n",
+      "You have 3 trial(s) left \n",
+      "Try Again!!!\n",
+      "Your guess is: 6\n",
+      "yes\n",
+      "Congrats!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rd # this programs ask the computer to guess a number.\n",
+    "no_of_trials=4\n",
+    "for i in range(no_of_trials):\n",
+    "    comp_guess=rd.randint(1,8)\n",
+    "    print(f\"Your guess is: {comp_guess}\")\n",
+    "    a=input()\n",
+    "    if a==\"yes\":\n",
+    "        print(\"Congrats!!!\")\n",
+    "        break\n",
+    "    elif a==\"no\":\n",
+    "        print(f\"You have {no_of_trials-(i+1)} trial(s) left \\nTry Again!!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "5c814006",
    "metadata": {},
@@ -165,7 +199,7 @@
    "outputs": [],
    "source": [
     "# function is a bit of code that can be reused. To create a function in python, you begin with the keyword (def)\n",
-    "# then a function name and a parentheses (), where you can define your parameters or arguments.\n",
+    "# then a function name and a parentheses (), where you can define your parameters or arguments. There is an indent at the end of every function. \n",
     "def add_2(a,b):\n",
     "    c=a+b\n",
     "    print(c) # In this case, this program will run but since there is no argument, there will be no output.\n"
@@ -301,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "8ab8f297",
    "metadata": {},
    "outputs": [
@@ -309,33 +343,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If you make the above operations with 2 the results will be 10,-6,16,0.25,2,0\n"
+      "If you make the above operations with 4 the results will be 14,-6,64,1.0,6,2\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(10, -6, 16, 0.25, 2, 0)"
+       "(14, -6, 64, 1.0, 6, 2)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def process(x):\n",
-    "    y1=x+8\n",
-    "    y2=x-8\n",
-    "    y3=x*8\n",
-    "    y4=x/8\n",
-    "    y5=x%8\n",
-    "    y6=x//8\n",
+    "def process(x,z):\n",
+    "    y1=x+8+z\n",
+    "    y2=x-8-z\n",
+    "    y3=x*8*z\n",
+    "    y4=x/8*z\n",
+    "    y5=x%8+z\n",
+    "    y6=x//8+z\n",
     "    print(f\"If you make the above operations with {x} the results will be {y1},{y2},{y3},{y4},{y5},{y6}\")\n",
     "    \n",
     "    return y1,y2,y3,y4,y5,y6\n",
     "\n",
-    "process(2)"
+    "process(4,2)"
    ]
   },
   {
@@ -492,7 +526,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
+   "id": "a3bc3afc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def function(x,y):\n",
+    "    eqn=x*y+x+y-37\n",
+    "    if eqn>0:\n",
+    "        eqn=6\n",
+    "    else: eqn=37\n",
+    "    return eqn\n",
+    "\n",
+    "x=5\n",
+    "y=3\n",
+    "function(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d2e54c6b",
    "metadata": {},
    "outputs": [
@@ -500,20 +564,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function rating_value at 0x000001D986D2BF60>\n",
-      "Watch if the rating is 8.6\n"
+      "<function rating_value at 0x000002B94EA2F2E0>\n",
+      "Don't watch if the rating value of the movie is 0.4\n"
      ]
     }
    ],
    "source": [
-    "def rating_value(rating=2:\n",
-    "    if rating < 1\n",
+    "def rating_value(rating=2):\n",
+    "    if rating < 1:\n",
     "        return f\"Don't watch if the rating value of the movie is {rating}\"\n",
     "    else: \n",
     "        return f\"Watch if the rating is {rating}\"\n",
     "\n",
     "print(rating_value)\n",
-    "print(rating_value(8.6))\n",
+    "print(rating_value(0.4))\n",
     "        "
    ]
   },
